fix: jump links on services page

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -269,6 +269,15 @@ a {
         font-size: 1.2rem;
     }
 }
+/* Fix jump links not navigating to top of div on services page due to sticky navbar */
+//128 is roughly the height of the navbar
+.jump-link-fix {
+    border-top: 128px solid transparent;
+    margin-top: -128px;
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+}
 
 /*** Media Queries ***/
 // Bootstrap width resizes: 768px, 991px, 1200px
@@ -294,6 +303,10 @@ a {
             display: block !important;
         }
         // End remove
+    }
+    .jump-link-fix {
+        border-top: 0px solid transparent;
+        margin-top: 0px;
     }
 }
 @media only screen and (max-width: 460px) {
